--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  /* enable syntax below to add red outline in all styling */
+   border:1px solid red !important;
+}
