update: static login page

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -17,5 +17,5 @@ code {
 
 * {
   /* enable syntax below to add red outline in all styling */
-   border:1px solid red !important;
+   /* border:1px solid red !important; */
 }
