--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -58,7 +58,7 @@
     /* Form Content - Input */
 
     .form-content-input {
-      height: 75%;
+      height: auto;
       background-color: #f5f8ff;
       box-shadow:
         2.5px 2.9px 4.5px rgba(0, 0, 0, 0.022),
@@ -68,11 +68,12 @@
         74px 83px 130px rgba(0, 0, 0, 0.07)
       ;
       border-radius: 12px;
+      border: solid 1px;
 
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      padding: 1rem;
+      padding: 2rem;
     }
     
     .form-content-input__header-text{
@@ -87,13 +88,43 @@
     .form-content-input__input-text{
       font-family: 'Open Sans';
       font-weight: 500;
-      font-size: 1rem;
+      font-size: .9rem;
       text-align: left;
-      margin-bottom: .5rem;
+      margin-bottom: 0rem;
     }
 
     .form-content-input__input-form{
-      margin-bottom: 1rem;
+      /* margin-bottom: 1rem;
+      width: 100%; */
+
+      display: flex;
+      align-items: center;
+      width: 100%;
+      font-size: 15px;
+      line-height: 26px;
+      padding: 4px 10px;
+      position: relative;
+      border-radius: 3px;
+      box-shadow: rgb(15 15 15 / 10%) 0px 0px 0px 1px inset;
+      cursor: text;
+      margin-top: 4px;
+      margin-bottom: 8px;
+    }
+
+    .form-content-input__button-form {
+      margin-top: 1rem;
+      font-size: 1rem;
+      border-radius: 3px
+    }
+
+    .form-content-input__href-register{
+      font-family: 'Open Sans';
+      font-weight: 500;
+      font-size: 1rem;
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: .5rem;
+      color: black;
     }
 
 
