--- a/src/assets/css/Register.css
+++ b/src/assets/css/Register.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.register-page {
+  background-color: #f8e4e0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #2c2c2c;
 }
+
+/* Form Row */
+
+.form-parent {
+  height: 70vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Form Content (Header & Input) */
+
+.form-content {
+  height: 100%;
+
+  /* remove padding on bootsrap row */
+  padding: 0 !important; 
+}
+
+    /* Form Content - Header */
+
+    .form-content-header {
+      height: 25%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .form-content-header h2 {
+      text-align: center;
+      font-size: 3rem;
+      font-weight: 700;
+
+      margin: 0;
+    }
+    .form-content-header p {
+      text-align: center;
+      font-family: 'Open Sans';
+      font-weight: 400;
+      font-size: 2rem;
+
+      margin-bottom: 3rem;
+    }
+
+    /* Form Content - Input */
+
+    .form-content-input {
+      height: auto;
+      background-color: #f5f8ff;
+      box-shadow:
+        2.5px 2.9px 4.5px rgba(0, 0, 0, 0.022),
+        6.4px 7.2px 11.3px rgba(0, 0, 0, 0.031),
+        13.1px 14.7px 23px rgba(0, 0, 0, 0.039),
+        27px 30.3px 47.5px rgba(0, 0, 0, 0.048),
+        74px 83px 130px rgba(0, 0, 0, 0.07)
+      ;
+      border-radius: 12px;
+      border: solid 1px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 2rem;
+    }
+    
+    .form-content-input__header-text{
+      font-family: 'Open Sans';
+      font-weight: 700;
+      font-size: 1.5rem;
+      text-align: center;
+      margin-bottom: 1rem;
+
+    }
+
+    .form-content-input__input-text{
+      font-family: 'Open Sans';
+      font-weight: 500;
+      font-size: .9rem;
+      text-align: left;
+      margin-bottom: 0rem;
+    }
+
+    .form-content-input__input-form{
+      /* margin-bottom: 1rem;
+      width: 100%; */
+
+      display: flex;
+      align-items: center;
+      width: 100%;
+      font-size: 15px;
+      line-height: 26px;
+      padding: 4px 10px;
+      position: relative;
+      border-radius: 3px;
+      box-shadow: rgb(15 15 15 / 10%) 0px 0px 0px 1px inset;
+      cursor: text;
+      margin-top: 4px;
+      margin-bottom: 8px;
+    }
+
+    .form-content-input__button-form {
+      margin-top: 1rem;
+      font-size: 1.3rem;
+      border-radius: 3px
+    }
+
+    .form-content-input__href-register{
+      font-family: 'Open Sans';
+      font-weight: 500;
+      font-size: 1rem;
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: .5rem;
+      color: black;
+    }
+
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
