--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.todo-page {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 5vh;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #2c2c2c;
 }
+
+/* Form Row */
+
+.form-parent {
+  height: 70vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Form Content (Header & Input) */
+
+.form-content {
+  height: 100%;
+
+  /* remove padding on bootsrap row */
+  padding: 0 !important; 
+}
+
+    /* Form Content - Header */
+
+    .task-header {
+      height: 25%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .task-header h2 {
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: 700;
+
+      margin: 0;
+    }
+    .task-header p {
+      text-align: center;
+      font-family: 'Open Sans';
+      font-weight: 400;
+      font-size: 1.5rem;
+
+      margin-bottom: 0rem;
+    }
+
+    /* Form Add */
+    .form-add {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+
+      margin-bottom: 2.5rem;
+      height: 8%;
+      width: 100%;
+    }
+
+    .form-add__input {
+      width: 80%;
+      height: 100%;
+    }
+
+    .form-add__button {
+      cursor: pointer;
+      background-color: #ffffff;
+      height: 100%;
+      width: 20%;
+      text-align: center;
+      border: solid 1px;
+      border-radius: 6px;
+      font-size: 1.2rem;
+    }
+
+    .form-add__button:hover {
+      background-color: #d1d1d1;
+    }
+
+    /* Content - List of Task */
+
+    .task-parent {
+      height: auto;
+      background-color: #ffffff;
+      border-radius: 12px;
+      border: solid 1px;
+      padding: 1rem;
+      padding-top: 0.5rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      margin-bottom: 0.8rem;
+
+      font-size: 1.2rem;
+    }
+
+    .task-desc {
+      width: 75%;
+      margin-right: 5%;
+    }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
